--- a/JasonetteWorkflow/app/build.gradle
+++ b/JasonetteWorkflow/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     buildToolsVersion '27.0.3'
     defaultConfig {
-        applicationId "com.wipro.dt"
+        applicationId "com.wipro.dgxworkflow"
         minSdkVersion 17
         targetSdkVersion 27
         versionCode 6
